--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,5 +16,7 @@ layout: archive
 <div class="entries-{{ entries_layout }}">
   {% include documents-collection.html entries=posts type=entries_layout %}
 </div>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
 
 {% include paginator.html %}
