--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -1,4 +1,3 @@
----
 layout: default
 ---
 
@@ -22,6 +21,7 @@ layout: default
   {% include sidebar.html %}
 
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>
+
     <!-- 광고 영역: 페이지 콘텐츠 상단 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
          crossorigin="anonymous"></script>
@@ -34,10 +34,11 @@ layout: default
     <script>
          (adsbygoogle = window.adsbygoogle || []).push({});
     </script>
+
     {% if page.title %}<meta itemprop="headline" content="{{ page.title | replace: '|', '&#124;' | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.excerpt %}<meta itemprop="description" content="{{ page.excerpt | markdownify | strip_html | strip_newlines | escape_once }}">{% endif %}
     {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date_to_xmlschema }}">{% endif %}
-@@ -52,6 +66,19 @@
+@ -52,6 +66,19 @@ layout: default
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
@@ -53,6 +54,7 @@ layout: default
       <script>
            (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
+
       <footer class="page__meta">
         {% if site.data.ui-text[site.locale].meta_label %}
           <h4 class="page__meta-title">{{ site.data.ui-text[site.locale].meta_label }}</h4>
