--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -186,7 +186,7 @@ layout: default
 
 <div id="adContainer">
     <div class="ad-header">
-        <span id="adCounter">광고가 7초 후에 닫힐 수 있습니다...</span>
+        <span id="adCounter">광고가 5초 후에 닫힐 수 있습니다...</span>
         <button class="close-btn" onclick="closeAd()">&times;</button>
     </div>
     <h2>광고</h2>
@@ -223,12 +223,12 @@ layout: default
         // 광고 송출 코드 실행
         (adsbygoogle = window.adsbygoogle || []).push({});
 
-        // 7초 카운터 후 닫기 버튼 활성화
-        let counter = 7;
+        // 5초 카운터 후 닫기 버튼 활성화
+        let counter = 5;
         let adCounter = document.getElementById('adCounter');
         let countdown = setInterval(function() {
             counter--;
-            adCounter.textContent = 광고가 ${counter}초 후에 닫힐 수 있습니다...;
+            adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
             if (counter <= 0) {
                 clearInterval(countdown);
                 adCounter.textContent = "광고를 닫을 수 있습니다.";
@@ -248,4 +248,4 @@ layout: default
      crossorigin="anonymous"></script>
 
 </body>
-</html> 
+</html>
