--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -193,7 +193,7 @@ layout: default
             left: 0;
             width: 100%;
             background-color: #fff;
-            z-index: 1001;
+            z-index: 10000; /* 매우 높은 z-index로 설정하여 다른 요소보다 위에 표시 */
             text-align: center;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
