--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -24,10 +24,10 @@ layout: default
   <!-- 본문 상단 고정 광고 -->
   <div class="fixed-ad">
       <ins class="adsbygoogle"
-           style="display:block; margin: auto;"
+           style="display:block; margin: auto; max-height: 60px; height: 60px;" <!-- 광고 높이 조정 -->
            data-ad-client="ca-pub-9374368296307755"
            data-ad-slot="9952845435"
-           data-ad-format="auto"
+           data-ad-format="horizontal"
            data-full-width-responsive="true"></ins>
       <script>
           (adsbygoogle = window.adsbygoogle || []).push({});
@@ -199,7 +199,7 @@ layout: default
         }
 
         .fixed-ad-padding {
-            margin-top: 100px; /* 광고 높이만큼 본문 아래 패딩 추가 */
+            margin-top: 70px; /* 광고 높이만큼 본문 아래 패딩 추가 */
         }
     </style>
 </head>
