--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -77,7 +77,16 @@ layout: default
   {% endif %}
 </div>
 
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
+<!-- 하단광고 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9374368296307755"
+     data-ad-slot="1724698171"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 <html lang="en">
