--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -77,13 +77,15 @@ layout: default
   {% endif %}
 </div>
 
+<!-- Google 애드센스 광고 코드 -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
      crossorigin="anonymous"></script>
-<!-- 하단광고 -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
+     style="display:block; text-align:center;"
      data-ad-client="ca-pub-9374368296307755"
-     data-ad-slot="1724698171"></ins>
+     data-ad-slot="1724698171"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
