--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -30,13 +30,14 @@ layout: default
     <div class="page__inner-wrap">
       <!-- 제목 위에 고정된 광고 -->
       <div class="ad-container" style="text-align: center; padding-bottom: 20px;">
-          <ins class="adsbygoogle"
-               style="display:inline-block;width:728px;height:90px"
-               data-ad-client="ca-pub-9374368296307755"
-               data-ad-slot="3603389079"></ins>
-          <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-format="autorelaxed"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="4454543532"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
       </div>
 
       {% unless page.header.overlay_color or page.header.overlay_image %}
@@ -88,7 +89,9 @@ layout: default
   {% endif %}
 </div>
 
-
+<!-- Google AdSense 스크립트 추가 -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
 
 
 
