--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -93,6 +93,18 @@ layout: default
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
      crossorigin="anonymous"></script>
 
+<!-- 추가 광고 예제 (원하는 위치에 추가 가능) -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-9374368296307755"
+     data-ad-slot="4454543532"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
+
 
 
 <html lang="en">
